force-app/main/default/objects/Organization_LOB_Information__c/Organization_LOB_Information__c.object-meta.xml
<CustomObject>
    <description>This object is used to capture detailed information about each line of business for an organization</description>
    <label>Organization LOB Information</label>
    <nameField>
        <displayFormat>OB-{000000}</displayFormat>
        <label>Organization LOB Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organization LOB Informations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>