force-app/main/default/objects/Organization_LOB_Information__c/fields/Customer_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Customer_Status_Reason__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field is used to store the status reason for the selected Line of Business in case the status is not active</description>
    <label>Customer Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding Incomplete</fullName>
            </value>
            <value>
                <fullName>Violation of Policy</fullName>
            </value>
            <value>
                <fullName>Legal or Regulatory Compliance</fullName>
            </value>
            <value>
                <fullName>Inactivity</fullName>
            </value>
            <value>
                <fullName>Business Decision</fullName>
            </value>
            <value>
                <fullName>Customer Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>