force-app/main/default/objects/Organization_LOB_Information__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <businessOwnerGroup>Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This field will be used to select the Line if business name</description>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invisalign</fullName>
            </value>
            <value>
                <fullName>iTero</fullName>
            </value>
            <value>
                <fullName>Dentalrx</fullName>
            </value>
            <value>
                <fullName>exocad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>