force-app/main/default/objects/Organization_LOB_Information__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <businessOwnerGroup>CRM_Customer_Master_Owners</businessOwnerGroup>
    <complianceGroup>None</complianceGroup>
    <description>This is Master-Details Relationship with the Organization Object</description>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Organization LOB Informations</relationshipLabel>
    <relationshipName>Organization_LOB_Informations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>